--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="textoPortfolio aparicionTextoPortfolio">
         <h4>Web FAB TEXTIL</h4>
         <h5 class="destacado"> Desarrollo web | WordPress | Diseño gráfico | SEO </h5>
-        <p>Realización de la pagina web corporativa para la empresa textil FAB TEXTIL. El diseño se ha enfocado en crear una estética moderna que combine con la identidad familiar y cercana de la marca. Desarrollada utilizando WordPress y optimizando su SEO.</p>
+        <p>Realización de la página web corporativa para la empresa textil FAB TEXTIL. El diseño se ha enfocado en crear una estética moderna que combine con la identidad familiar y cercana de la marca. Desarrollada utilizando WordPress y optimizando su SEO.</p>
         <div class="botones">
             <a target="_blank" href="https://www.fabtextil.com/" class="boton"><p>Ver sitio</p><div class="iconoLink iconosportfolio"></div></a>
     </div>
@@ -112,7 +112,7 @@
         <div class="textoPortfolio aparicionTextoPortfolio">
         <h4>Web Bruno Vassari</h4>
         <h5 class="destacado"> Desarrollo web | WordPress | Diseño gráfico | SEO </h5>
-        <p>Trabajando en la agencia Imago realicé diseño y desarrollo de la pagina web corporativa para la empresa Bruno Vassari. Desarrollada con WordPress, se usó plugin de woocommerce en modo catalogo para mostrar productos y se realizó la optimización de su SEO.</p>
+        <p>Trabajando en la agencia Imago realicé diseño y desarrollo de la página web corporativa para la empresa Bruno Vassari. Desarrollada con WordPress, se usó plugin de woocommerce en modo catálogo para mostrar productos y se realizó la optimización de su SEO.</p>
         <div class="botones">
             <a target="_blank" href="https://brunovassari.com/" class="boton"><p>Ver sitio</p><div class="iconoLink iconosportfolio"></div></a>
     </div>
@@ -142,7 +142,7 @@
             <div class="textoPortfolio aparicionTextoPortfolio">
             <h4>Web de la Asociación Española de Ingredientes Cosméticos (AEIC)</h4>
             <h5 class="destacado"> Desarrollo web | WordPress | SEO </h5>
-            <p>Trabajando en la agencia Imago realicé el desarrollo de la pagina web corporativa para la Asociación Española de Ingredientes Cosméticos (AEIC). Desarrollada utilizando WordPress y optimizando su SEO.</p>
+            <p>Trabajando en la agencia Imago realicé el desarrollo de la página web corporativa para la Asociación Española de Ingredientes Cosméticos (AEIC). Desarrollada utilizando WordPress y optimizando su SEO.</p>
             <div class="botones">
                 <a target="_blank" href="https://aeic.eu/" class="boton"><p>Ver sitio</p><div class="iconoLink iconosportfolio"></div></a>
         </div>
@@ -157,7 +157,7 @@
             <div class="textoPortfolio aparicionTextoPortfolio">
             <h4>Web Institut Mèdic Estètic Dr. Nieto</h4>
             <h5 class="destacado"> Desarrollo web | WordPress | Diseño gráfico | SEO </h5>
-            <p>Trabajando en la agencia Imago realicé diseño y desarrollo de la pagina web corporativa para Institut Mèdic Estètic Dr. Nieto. Diseñada, desarrollada con WordPress, optimización de su SEO y realización de actualizaciones hasta 2023.</p>
+            <p>Trabajando en la agencia Imago realicé diseño y desarrollo de la página web corporativa para Institut Mèdic Estètic Dr. Nieto. Diseñada, desarrollada con WordPress, optimización de su SEO y realización de actualizaciones hasta 2023.</p>
             <div class="botones">
         </div>
             </div>
@@ -171,7 +171,7 @@
             <div class="textoPortfolio aparicionTextoPortfolio">
             <h4>Concurso ficticio PS5</h4>
             <h5 class="destacado"> Desarrollo web | CSS | Tailwind CSS | HTML | Diseño gráfico</h5>
-            <p>Landing de concurso ficticio de PlayStation 5. Desarrollado en HTML y CSS. Proyexcto para practicar el uso de CSS sobretodo con Tailwind CSS y animaciones con libreria AOS</p>
+            <p>Landing de concurso ficticio de PlayStation 5. Desarrollado en HTML y CSS. Proyecto para practicar el uso de CSS, sobre todo con Tailwind CSS y animaciones con librería AOS</p>
             <div class="botones">
                 <a target="_blank" href="https://landing-ps5.netlify.app/" class="boton"><p>Ver sitio</p><div class="iconoLink iconosportfolio"></div></a>
                 <a target="_blank" href="https://github.com/basantades/Concurso-PS5" class="boton"><p>Repositorio GitHub</p><div class="iconoGithub iconosportfolio"></div></a>
@@ -187,7 +187,7 @@
             <div class="textoPortfolio aparicionTextoPortfolio">
             <h4>Web KID'S INNOVATION FEST 2022</h4>
             <h5 class="destacado"> Desarrollo web | WordPress | SEO </h5>
-            <p>Trabajando en la agencia Imago realicé el desarrollo de la pagina web para el evento KID'S INNOVATION FEST del año 2022 que se realizó en Lloret de Mar. Desarrollada utilizando WordPress y optimizando su SEO.</p>
+            <p>Trabajando en la agencia Imago realicé el desarrollo de la página web para el evento KID'S INNOVATION FEST del año 2022 que se realizó en Lloret de Mar. Desarrollada utilizando WordPress y optimizando su SEO.</p>
             <div class="botones">
         </div>
             </div>
@@ -227,7 +227,7 @@
                 <h5 class="destacado">Desarrollo web | CSS | HTML | JavaScript | WordPress | UI/UX | Diseño gráfico</h5>
                 <p>Profesional del <strong>diseño gráfico</strong>, iniciado en trabajos de impresión y editorial y evolucionado a <strong>diseño online y web</strong>. Acostumbrado al trabajo en equipo, me considero resolutivo, con una amplia experiencia en proyectos muy variados tras más de 16 años trabajando en agencia para clientes como Mayoral, Círculo de Lectores, Educa Borras, Jovi...</p>
                 <p>Después de crear bastantes webs en <strong>WordPress</strong> me estoy centrando más en el <strong>desarrollo web</strong> y ampliando más mis conocimientos en <strong>HTML, CSS, UI/UX, JavaScript y PHP</strong>.</p>
-                <p>Un ejemplo es esta web, la cual he desarrollado utilizando <strong>CSS</strong>  y <strong> JavaScript puro</strong>. Puedes ver la presentacíon de proyecto en <a href="https://drive.google.com/file/d/1F20Uk5kR9rLVoVZmWwduj-jaT1XOhEfh/view?usp=sharing" target="_blank"><strong>este link</strong></a></p>
+                <p>Un ejemplo es esta web, la cual he desarrollado utilizando <strong>CSS</strong>  y <strong> JavaScript puro</strong>. Puedes ver la presentación de proyecto en <a href="https://drive.google.com/file/d/1F20Uk5kR9rLVoVZmWwduj-jaT1XOhEfh/view?usp=sharing" target="_blank"><strong>este link</strong></a></p>
                 <div class="botones">
                     <a target="_blank" href="https://drive.google.com/file/d/19h_76yJXkYsbDNo9laZYt0wX1qgJQ57j/view?usp=sharing" class="boton img-aparicion"><p>CV completo</p><div class="iconoPdf iconosportfolio"></div></a>
                 </div>
@@ -298,7 +298,7 @@
         </div>
         <div id="desplegable" class="ocultar">
             <div class="listaAficiones animate-fade">
-                <p class="aparicionFadeUp">Juegos de mesa</p><p class="aparicionFadeUp">Videojuegos</p><p class="aparicionFadeUp">Escape Rooms</p><p class="aparicionFadeUp">Wargames</p><p class="aparicionFadeUp">Puzzles</p><p class="aparicionFadeUp">Rompecabezas</p><p class="aparicionFadeUp">Cine</p><p class="aparicionFadeUp">Series</p><p class="aparicionFadeUp">Literatura de fantasía</p><p class="aparicionFadeUp">Ciencia Ficción</p><p class="aparicionFadeUp">Terror</p><p class="aparicionFadeUp">True Crime</p><p class="aparicionFadeUp">Deportes</p><p class="aparicionFadeUp">Gimnasio</p><p class="aparicionFadeUp">Fútbol (Depor)</p><p class="aparicionFadeUp">Billar</p><p class="aparicionFadeUp">Pádel... por la cervecita de despúes</p>
+                <p class="aparicionFadeUp">Juegos de mesa</p><p class="aparicionFadeUp">Videojuegos</p><p class="aparicionFadeUp">Escape Rooms</p><p class="aparicionFadeUp">Wargames</p><p class="aparicionFadeUp">Puzzles</p><p class="aparicionFadeUp">Rompecabezas</p><p class="aparicionFadeUp">Cine</p><p class="aparicionFadeUp">Series</p><p class="aparicionFadeUp">Literatura de fantasía</p><p class="aparicionFadeUp">Ciencia Ficción</p><p class="aparicionFadeUp">Terror</p><p class="aparicionFadeUp">True Crime</p><p class="aparicionFadeUp">Deportes</p><p class="aparicionFadeUp">Gimnasio</p><p class="aparicionFadeUp">Fútbol (Depor)</p><p class="aparicionFadeUp">Billar</p><p class="aparicionFadeUp">Pádel... por la cervecita de después</p>
         </div>
         </div>
 
