--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
     </div>
     <div id="aficiones" class="aparicionBorde">
         <div id="linkDesplegable" class="flex elementos-aparicion">
-            <p>Si quieres conocerme un poco más despliega para ver mis aficiones </p>
+            <p>Si quieres conocerme un poco más, despliega para ver mis aficiones </p>
             <div id="iconoDesplegable" class="iconoUp iconos rotado"></div>
         </div>
         <div id="desplegable" class="ocultar">
