--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <div id="iconoMenu" class="iconos soloMovil animate-fadezoom "></div>
         </div>
         <div class="textoDegradado black">
-            <a href="#"><h4 class="nombreGrande"><span class="normal">.</span>basanta<span class="normal">{des}</span></h4></a>
-            <a href="#"><h4 class="nombrePequeno"><span class="normal">.{</span>b<span class="normal">}</span></h4></a>
+            <a href="#" aria-label="Ir a inicio"><h4 class="nombreGrande"><span class="normal">.</span>basanta<span class="normal">{des}</span></h4></a>
+            <a href="#" aria-label="Ir a inicio"><h4 class="nombrePequeno"><span class="normal">.{</span>b<span class="normal">}</span></h4></a>
         </div>
         <nav>
             <div class="menu animacionfadeDown"><a href="#portfolio">Portfolio</a></div>
@@ -60,8 +60,8 @@
         <div class="puntos"><div class="punto1 actual"></div><div class="punto2"></div><div class="punto3"></div><div class="punto4"></div></div>
     </div>
     <div id="hero">
-        <div class="textHero"><h1 class="aparicionTexto"><span class="saludo aparicionTexto2"><span class="borrarMiniMovil">¡Hola! </span>soy Alberto Basanta,</span><br><span class="front">FRONT</span><br class="soloTablet"><span class="end "><span class="guion">—</span>END </span><br><span class="developer animate-fade aparicionIzquierdaExtra">DEVELOPER</span></h1><div><h5 class="subtitulo aparicionInferior2">Con un buen código <br class="soloMovil">todo se ve mejor</h5></div></div>
-        <div class="flecha"><a href="#portfolio"><div class="flechaDown"></div></a></div>
+        <div class="textHero"><h1 class="aparicionTexto"><span class="saludo aparicionTexto2"><span class="borrarMiniMovil">¡Hola! </span>soy Alberto Basanta,</span><br><span class="front">FRONT</span><br class="soloTablet"><span class="end "><span class="guion">—</span>END </span><br><span class="developer animate-fade aparicionIzquierdaExtra">DEVELOPER</span></h1><div><h2 class="subtitulo aparicionInferior2">Con un buen código <br class="soloMovil">todo se ve mejor</h2></div></div>
+        <div class="flecha"><a href="#portfolio" aria-label="Ir a siguiente sección"><div class="flechaDown"></div></a></div>
         <div class="bolaMov1"></div>
         <div class="bolaMov2"></div>
         <div class="bolaMov3"></div>
@@ -330,7 +330,7 @@
         <div class="flex"><p>Ya has llegado al final, </p>
         <div class="flex volver">
             <a href="#"><p><span class="bold">vuelve al inicio</span></p></a>
-            <a href="#"><div class="iconoUp iconos"></div></a>
+            <a href="#" aria-label="Ir a inicio"><div class="iconoUp iconos"></div></a>
         </div>
         </div>
     </footer>
