--- a/index.html
+++ b/index.html
@@ -26,10 +26,17 @@
     <link rel="preload" href="fonts/Roboto-Regular.woff2" as="font">
     <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preload" href="css/root.css">
     <link id="rootcss" rel="stylesheet" href='css/root.css'>
+    <link rel="preload" href="css/iconos.css" as="style">
     <link rel="stylesheet" href="css/iconos.css">
+    <link rel="preload" href="css/animaciones.css" as="style">
     <link rel="stylesheet" href="css/animaciones.css">
+    <link rel="preload" href="css/fonts-size-root.css" as="style">
     <link rel="stylesheet" href="css/fonts-size-root.css">
+    <link rel="preload" href="css/root2.css">
+    <link rel="preload" href="css/root3.css">
+    <link rel="preload" href="css/root4.css">
 </head>
 <body>
 <div id="wrapper">
@@ -230,6 +237,9 @@
                 <p>Un ejemplo es esta web, la cual he desarrollado utilizando <strong>CSS</strong>  y <strong> JavaScript puro</strong>. Puedes ver la presentación de proyecto en <a href="https://drive.google.com/file/d/1F20Uk5kR9rLVoVZmWwduj-jaT1XOhEfh/view?usp=sharing" target="_blank"><strong>este link</strong></a></p>
                 <div class="botones">
                     <a target="_blank" href="https://drive.google.com/file/d/19h_76yJXkYsbDNo9laZYt0wX1qgJQ57j/view?usp=sharing" class="boton img-aparicion"><p>CV completo</p><div class="iconoPdf iconosportfolio"></div></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/albertobasanta/" class="boton img-aparicion"><p>Linkedin</p><div class="iconoLinkedin iconosportfolio"></div></a>
+                    <a target="_blank" href="https://github.com/basantades" class="boton img-aparicion"><p>GitHub</p><div class="iconoGithub iconosportfolio"></div></a>
+                    <a target="_blank" href="https://codepen.io/basantades" class="boton img-aparicion"><p>CodePen</p><div class="iconoCodepen iconosportfolio"></div></a>
                 </div>
             </div>
         </div>
@@ -312,14 +322,14 @@
 <div class="listado elementos-aparicion"><a target="_blank" href="mailto:basantades@gmail.com"><div class="iconoEmail iconoscontacto"></div><p>basantades@gmail.com</p><div class="iconoFlechaLink iconos animacionFlechaLink"></div></a></div>
 <div class="listado elementos-aparicion"><a target="_blank" href="https://api.whatsapp.com/send?phone=34630991055"><div class="iconoWhatsapp iconoscontacto"></div><p>630991055</p><div class="iconoFlechaLink iconos animacionFlechaLink"></div></a></div>
 <div class="listado elementos-aparicion"><a target="_blank" href="https://www.linkedin.com/in/albertobasanta/"><div class="iconoLinkedin iconoscontacto"></div><p>/albertobasanta</p><div class="iconoFlechaLink iconos animacionFlechaLink"></div></a></div> 
-<div class="listado elementos-aparicion"><a target="_blank" href="https://github.com/basantades"><div class="iconoGithub iconoscontacto"></div><p>/basantades</p><div class="iconoFlechaLink iconos animacionFlechaLink"></div></a></div>
-<div class="listado elementos-aparicion"><a target="_blank" href="https://codepen.io/basantades"><div class="iconoCodepen iconoscontacto"></div><p>/basantades</p><div class="iconoFlechaLink iconos animacionFlechaLink"></div></a></div>
+<!-- <div class="listado elementos-aparicion"><a target="_blank" href="https://github.com/basantades"><div class="iconoGithub iconoscontacto"></div><p>/basantades</p><div class="iconoFlechaLink iconos animacionFlechaLink"></div></a></div>
+<div class="listado elementos-aparicion"><a target="_blank" href="https://codepen.io/basantades"><div class="iconoCodepen iconoscontacto"></div><p>/basantades</p><div class="iconoFlechaLink iconos animacionFlechaLink"></div></a></div> -->
 </div>
-<div class="iconosMovil img-aparicion">
+<!-- <div class="iconosMovil img-aparicion">
 <div><a target="_blank" href="mailto:basantades@gmail.com"><div class="iconoEmail iconos"></div></a></div>
 <div><a target="_blank" href="https://api.whatsapp.com/send?phone=34630991055"><div class="iconoWhatsapp iconos"></div></a></div>
 <div><a target="_blank" href="https://www.linkedin.com/in/albertobasanta/"><div class="iconoLinkedin iconos"></div></a></div> 
-</div>
+</div> -->
 <div class="flexcentrado">
      <div class="marco"><a target="_blank" href="mailto:basantades@gmail.com"><h5 class="fraseFinal">¿Tienes un proyecto en mente? ¡Estoy a <span class="clic">solo un clic</span> de distancia, no dudes en escribirme!</h5></a></div>
 </div>
