--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Web de Alberto Basanta, front end developer y diseñador gráfico en Barcelona. Portfolio y Curriculum Vitae.">
+    <meta name="description" content="Portfolio web de Alberto Basanta, front end developer y diseñador gráfico en Barcelona. Desarrollo web, CSS, HTML, JavaScript, WordPress, UI/UX, Diseño gráfico.">
     <meta name="author" content="Alberto Basanta">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:type" content="website">
