--- a/index.html
+++ b/index.html
@@ -27,18 +27,13 @@
     <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preload" href="css/root.css">
-    <link id="rootcss" rel="stylesheet" href='css/root.css'>
+    <link rel="stylesheet" href='css/root.css'>
     <link rel="preload" href="css/iconos.css" as="style">
     <link rel="stylesheet" href="css/iconos.css">
     <link rel="preload" href="css/animaciones.css" as="style">
     <link rel="stylesheet" href="css/animaciones.css">
-    <link rel="preload" href="css/fonts-size-root.css" as="style">
-    <link rel="stylesheet" href="css/fonts-size-root.css">
-    <link rel="preload" href="css/root2.css">
-    <link rel="preload" href="css/root3.css">
-    <link rel="preload" href="css/root4.css">
 </head>
-<body>
+<body class="verde">
 <div id="wrapper">
     <header>
         <div class="iconoMenu aparicionIzquierda">
