--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="preload" href="fonts/Roboto-Regular.woff2" as="font">
     <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="preload" href="css/root.css">
+    <link rel="preload" href="css/root.css" as="style">
     <link rel="stylesheet" href='css/root.css'>
     <link rel="preload" href="css/iconos.css" as="style">
     <link rel="stylesheet" href="css/iconos.css">
