--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="puntos"><div class="punto1 actual"></div><div class="punto2"></div><div class="punto3"></div><div class="punto4"></div></div>
     </div>
     <div id="hero">
-        <div class="textHero"><h1 class="aparicionTexto"><span class="saludo aparicionTexto2"><span class="borrarMiniMovil">¡Hola! </span>soy Alberto Basanta,</span><br><span class="front">FRONT</span><br class="soloTablet"><span class="end "><span class="guion">—</span>END </span><br><span class="developer animate-fade aparicionIzquierdaExtra">DEVELOPER</span></h1><div><h2 class="subtitulo aparicionInferior2">Con un buen código <br class="soloMovil">todo se ve mejor</h2></div></div>
+        <div class="textHero"><h1 class="aparicionTexto"><span class="saludo aparicionTexto2"><span class="borrarMiniMovil">¡Hola! </span>soy Alberto Basanta,</span><br><span class="front">FRONT</span><br class="soloTablet"><span class="end "><span class="guion">—</span>END </span><br><span class="developer aparicionIzquierdaExtra">DEVELOPER</span></h1><div><h2 class="subtitulo aparicionInferior2">Con un buen código <br class="soloMovil">todo se ve mejor</h2></div></div>
         <div class="flecha"><a href="#portfolio" aria-label="Ir a siguiente sección"><div class="flechaDown"></div></a></div>
         <div class="bolaMov1"></div>
         <div class="bolaMov2"></div>
@@ -77,7 +77,7 @@
         <article>
             <div class="carrusel aparicionFadeUp">
         <div class="interiorCarrusel">
-            <img src="images/fabtextil.webp" alt="web Fabtextil en WordPress">
+            <img src="images/fabtextil.webp" alt="web Fabtextil en WordPress" width="">
         </div>
     </div>
         <div class="textoPortfolio aparicionTextoPortfolio">
