--- a/index.html
+++ b/index.html
@@ -21,14 +21,10 @@
     <link rel="icon" type="image/png" href="images/favicon/favicon-16x16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="images/favicon/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="images/favicon/favicon-96x96.png" sizes="96x96">
-    <link rel="preload" href="fonts/Roboto-Black.woff2" as="font">
-    <link rel="preload" href="fonts/Roboto-Bold.woff2" as="font">
-    <link rel="preload" href="fonts/Roboto-Regular.woff2" as="font">
     <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preload" href="css/root.css" as="style">
     <link rel="stylesheet" href='css/root.css'>
-    <link rel="preload" href="css/iconos.css" as="style">
     <link rel="stylesheet" href="css/iconos.css">
     <link rel="preload" href="css/animaciones.css" as="style">
     <link rel="stylesheet" href="css/animaciones.css">
@@ -77,7 +73,7 @@
         <article>
             <div class="carrusel aparicionFadeUp">
         <div class="interiorCarrusel">
-            <img src="images/fabtextil.webp" alt="web Fabtextil en WordPress" width="">
+            <img src="images/fabtextil.webp" alt="web Fabtextil en WordPress" height="413px" width="2621px">
         </div>
     </div>
         <div class="textoPortfolio aparicionTextoPortfolio">
@@ -92,7 +88,7 @@
         <article>
         <div class="carrusel aparicionFadeUp">
         <div class="interiorCarrusel">
-            <img src="images/juego-pokemon.webp" alt="portfolio juego Pokemon">
+            <img src="images/juego-pokemon.webp" alt="portfolio juego Pokemon" height="413px" width="2152px">
         </div>
         </div>
         <div class="textoPortfolio aparicionTextoPortfolio">
@@ -108,7 +104,7 @@
         <article>
             <div class="carrusel aparicionFadeUp">
         <div class="interiorCarrusel">
-            <img src="images/Bruno_Vassari.webp" alt="web Bruno Vassari en WordPress">
+            <img src="images/Bruno_Vassari.webp" alt="web Bruno Vassari en WordPress" height="413px" width="3340px">
         </div>
     </div>
         <div class="textoPortfolio aparicionTextoPortfolio">
@@ -123,7 +119,7 @@
         <article>
             <div class="carrusel aparicionFadeUp">
             <div class="interiorCarrusel">
-                <img src="images/Big-Up.webp" alt="portfolio Proyecto Big Up">
+                <img src="images/Big-Up.webp" alt="portfolio Proyecto Big Up" height="413px" width="2542px">
             </div>
             </div>
             <div class="textoPortfolio aparicionTextoPortfolio">
@@ -138,7 +134,7 @@
             <article>
                 <div class="carrusel aparicionFadeUp">
             <div class="interiorCarrusel">
-                <img src="images/AEIC.webp" alt="web AEIC">
+                <img src="images/AEIC.webp" alt="web AEIC" height="413px" width="2152px">
             </div>
         </div>
             <div class="textoPortfolio aparicionTextoPortfolio">
@@ -153,7 +149,7 @@
             <article>
                 <div class="carrusel aparicionFadeUp">
             <div class="interiorCarrusel">
-                <img src="images/institut-medic-DrNieto.webp" alt="web Institut Mèdic Estètic Dr. Nieto">
+                <img src="images/institut-medic-DrNieto.webp" alt="web Institut Mèdic Estètic Dr. Nieto" height="413px" width="3560px">
             </div>
         </div>
             <div class="textoPortfolio aparicionTextoPortfolio">
@@ -167,7 +163,7 @@
         <article>
             <div class="carrusel aparicionFadeUp">
             <div class="interiorCarrusel">
-                <img src="images/concurso_PS5.webp" alt="portfolio concurso ficticio PS5">
+                <img src="images/concurso_PS5.webp" alt="portfolio concurso ficticio PS5" height="413px" width="1902px">
             </div>
             </div>
             <div class="textoPortfolio aparicionTextoPortfolio">
@@ -183,7 +179,7 @@
             <article>
                 <div class="carrusel aparicionFadeUp">
             <div class="interiorCarrusel">
-                <img src="images/Kids_innovation_fest.webp" alt="web KID'S INNOVATION FEST 2022">
+                <img src="images/Kids_innovation_fest.webp" alt="web KID'S INNOVATION FEST 2022" height="413px" width="4278px">
             </div>
         </div>
             <div class="textoPortfolio aparicionTextoPortfolio">
@@ -197,7 +193,7 @@
             <article>
                 <div class="carrusel aparicionFadeUp">
             <div class="interiorCarrusel">
-                <img src="images/SoundMoovz.webp" alt="web SoundMoovz">
+                <img src="images/SoundMoovz.webp" alt="web SoundMoovz" height="413px" width="4997px">
             </div>
         </div>
             <div class="textoPortfolio aparicionTextoPortfolio">
@@ -209,7 +205,6 @@
         </div>
             </div>
             </article>
-        <!-- <h5 class="frase animate-movimiento-rebote">"Estos son mis diseños, si no le gustan, tengo otros"</h5> -->
     </section>
     <section id="sobremi">
         <div class="titular animacionFade"><h2>Sobre mi</h2></div>
@@ -217,7 +212,7 @@
         <div class="doscolumnas">
             <div class="flexcentrado cuadrado">
                 <div class="foto1plano flexcentrado">
-                    <img class="imgAlberto img-aparicion" src="images/alberto-basanta.webp" alt="Front-enddevloper Alberto Basanta Debasa">
+                    <img class="imgAlberto img-aparicion" src="images/alberto-basanta.webp" height="400px" width="400px" alt="Front-end developer Alberto Basanta Debasa">
                 </div>
                 <div class="enmarcarFoto animacion-marcos cuadrado">
                     <div class="marcoFoto"></div>
