--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     <section id="sobremi">
         <div class="titular animacionFade"><h2>Sobre mi</h2></div>
         <div class="filete aparicionfilete"></div>
-        <div class="doscolumnas">
+        <article class="doscolumnas">
             <div class="flexcentrado cuadrado">
                 <div class="foto1plano flexcentrado">
                     <img class="imgAlberto img-aparicion" src="images/alberto-basanta.webp" height="400px" width="400px" alt="Front-end developer Alberto Basanta Debasa">
@@ -232,8 +232,8 @@
                     <a target="_blank" href="https://codepen.io/basantades" class="boton img-aparicion"><p>CodePen</p><div class="iconoCodepen iconosportfolio"></div></a>
                 </div>
             </div>
-        </div>
-    <div id="habilidades">
+        </article>
+    <article id="habilidades">
         <h3  class="img-aparicion">Habilidades</h3>
         <p   class="animacionFade">Herramientas y tecnologías que utilizo para dar vida a las ideas.</p>
         <div class="listahabilidades">
@@ -290,8 +290,8 @@
             <p>Mailchimp</p>
         </div>
     </div>
-    </div>
-    <div id="aficiones" class="aparicionBorde">
+    </article>
+    <article id="aficiones" class="aparicionBorde">
         <div id="linkDesplegable" class="flex elementos-aparicion">
             <p>Si quieres conocerme un poco más, despliega para ver mis aficiones </p>
             <div id="iconoDesplegable" class="iconoUp iconos rotado"></div>
@@ -302,12 +302,12 @@
         </div>
         </div>
 
-    </div>
+    </article>
     </section>
     <section id="contacto">
         <div class="titular animacionFade"><h2>Contacto</h2></div>
         <div class="filete aparicionfilete"></div>
-        <div class="doscolumnas contacto">
+        <article class="doscolumnas contacto">
             <div class="lista">
 <div class="listado elementos-aparicion"><a target="_blank" href="mailto:basantades@gmail.com"><div class="iconoEmail iconoscontacto"></div><p>basantades@gmail.com</p><div class="iconoFlechaLink iconos animacionFlechaLink"></div></a></div>
 <div class="listado elementos-aparicion"><a target="_blank" href="https://api.whatsapp.com/send?phone=34630991055"><div class="iconoWhatsapp iconoscontacto"></div><p>630991055</p><div class="iconoFlechaLink iconos animacionFlechaLink"></div></a></div>
@@ -316,7 +316,7 @@
 <div class="flexcentrado">
      <div class="marco"><a target="_blank" href="mailto:basantades@gmail.com"><h5 class="fraseFinal">¿Tienes un proyecto en mente? ¡Estoy a <span class="clic">solo un clic</span> de distancia, no dudes en escribirme!</h5></a></div>
 </div>
-</div>
+</article>
     </section>
     <footer>
         <p>© 2024 Alberto Basanta.</p>
