--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <div class="textoPortfolio aparicionTextoPortfolio">
             <h4>Concurso ficticio PS5</h4>
             <h5 class="destacado"> Desarrollo web | CSS | Tailwind CSS | HTML | Diseño gráfico</h5>
-            <p>Landing de concurso ficticio de PlayStation 5. Desarrollado en HTML y CSS. Proyecto para practicar el uso de CSS, sobre todo con Tailwind CSS y animaciones con librería AOS</p>
+            <p>Landing de concurso ficticio de PlayStation 5. Desarrollado en HTML y CSS. Proyecto para practicar el uso de CSS, sobre todo con Tailwind CSS y animaciones con librería AOS.</p>
             <div class="botones">
                 <a target="_blank" href="https://landing-ps5.netlify.app/" class="boton"><p>Ver sitio</p><div class="iconoLink iconosportfolio"></div></a>
                 <a target="_blank" href="https://github.com/basantades/Concurso-PS5" class="boton"><p>Repositorio GitHub</p><div class="iconoGithub iconosportfolio"></div></a>
