--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="puntos"><div class="punto1 actual"></div><div class="punto2"></div><div class="punto3"></div><div class="punto4"></div></div>
     </div>
     <div id="hero">
-        <div class="textHero"><h1 class="aparicionTexto"><span class="saludo aparicionTexto2"><span class="borrarMiniMovil">¡Hola! </span>soy Alberto Basanta,</span><br><span class="front">FRONT</span><br class="soloTablet"><span class="end "><span class="guion">—</span>END </span><br><span class="developer aparicionIzquierdaExtra">DEVELOPER</span></h1><div><h2 class="subtitulo aparicionInferior2">Con un buen código <br class="soloMovil">todo se ve mejor</h2></div></div>
+        <div class="textHero"><h1 class="aparicionTexto"><span class="saludo aparicionTexto2"><span class="borrarMiniMovil">¡Hola! </span>soy Alberto Basanta,</span><br><span class="dise">DISEÑO</span><br class="soloMovil"><span class="web "> WEB </span><br><span class="maqueta aparicionIzquierdaExtra">MAQUETACIÓN</span></h1><div><h2 class="subtitulo aparicionInferior2">Con un buen código <br class="soloMovil">todo se ve mejor</h2></div></div>
         <div class="flecha"><a href="#portfolio" aria-label="Ir a siguiente sección"><div class="flechaDown"></div></a></div>
         <div class="bolaMov1"></div>
         <div class="bolaMov2"></div>
