--- a/index.html
+++ b/index.html
@@ -39,14 +39,16 @@
         </div>
         <nav>
             <div class="menu animacionfadeDown"><a href="#portfolio">Portfolio</a></div>
-            <div class="menu animacionfadeDown2"><a href="#sobremi">Sobre mi</a></div>
-            <div class="menu animacionfadeDown3"><a href="#contacto">Contacto</a></div>
+            <div class="menu animacionfadeDown2"><a href="#galeria">Galería</a></div>
+            <div class="menu animacionfadeDown3"><a href="#sobremi">Sobre mi</a></div>
+            <div class="menu animacionfadeDown4"><a href="#contacto">Contacto</a></div>
         </nav> 
     </header>
     <div id="desplegableMenu" class="desplegableMenu ocultar">
         <div class="menu animacionfadeDown"><a href="#portfolio">Portfolio</a></div>
-        <div class="menu animacionfadeDown2"><a href="#sobremi">Sobre mi</a></div>
-        <div class="menu animacionfadeDown3"><a href="#contacto">Contacto</a></div>
+        <div class="menu animacionfadeDown2"><a href="#galeria">Galería</a></div>
+        <div class="menu animacionfadeDown3"><a href="#sobremi">Sobre mi</a></div>
+        <div class="menu animacionfadeDown4"><a href="#contacto">Contacto</a></div>
     </div> 
     <div id="selectorColores">
         <div id="iconoLight" class="icono-svg"></div>
@@ -203,6 +205,92 @@
             </div>
             </article>
     </section>
+    <section id="galeria">
+        <div class="titular animacionFade"><h2>Galeria</h2></div>
+        <div class="filete aparicionfilete"></div>
+        <article class="containergaleria">
+            <div class="itemgaleria">
+                <img class="img-aparicion" src="images/galeria/diseno-grafico-slides-mayoral.webp" alt="Slides Mayoral">
+                <div class="animacionFade"><p>Slides para web Mayoral</p></div>
+            </div>
+            <div class="itemgaleria">
+                <img class="img-aparicion" src="images/galeria/diseno-grafico-silver-cross.webp" alt="RRSS Silver Cross">
+                <div class="animacionFade"><p>RRSS Silver Cross</p></div>
+            </div>
+            <div class="itemgaleria">
+                <img class="img-aparicion" src="images/galeria/diseno-grafico-believe.webp" alt="RRSS Believe">
+                <div class="animacionFade"><p>RRSS Believe</p></div>
+            </div>
+            <div class="itemgaleria">
+                <img class="img-aparicion" src="images/galeria/diseno-grafico-cuatriptico-42000.webp" alt="Cuatriptico de presentacion Puzzle 42000 Educa">
+                <div class="animacionFade"><p>Cuadríptico de presentación Puzzle 42000 Educa</p></div>
+            </div>
+            <div class="itemgaleria">
+                <img class="img-aparicion" src="images/galeria/diseno-grafico-belive-fidelizacion.webp" alt="Díptico fidelización Grupo Believe">
+                <div class="animacionFade"><p>Díptico fidelización Grupo Believe</p></div>
+            </div>
+            <div class="itemgaleria">
+                <img class="img-aparicion" src="images/galeria/diseno-grafico-fnac-rocketman.webp" alt="Concurso Rocketman para Fnac">
+                <div class="animacionFade"><p>Concurso Rocketman para Fnac</p></div>
+            </div>
+            <div class="itemgaleria">
+                <img class="img-aparicion" src="images/galeria/diseno-grafico-Nebulous-stars.webp" alt="Concursos Nebulous Stars para Educa Borras">
+                <div class="animacionFade"><p>Concursos Nebulous Stars para Educa Borras</p></div>
+            </div>
+            <div class="itemgaleria">
+                <img class="img-aparicion" src="images/galeria/diseno-grafico-tu-circulo.webp" alt="Revista Tu Círculo">
+                <div class="animacionFade"><p>Revista Tu Círculo</p></div>
+            </div>
+            <div class="itemgaleria">
+                <img class="img-aparicion" src="images/galeria/diseno-grafico-carta-copas-believe.webp" alt="Carta de consumiciones Priscila (Grupo Believe)">
+                <div class="animacionFade"><p>Carta de consumiciones Priscila (Grupo Believe)</p></div>
+            </div>
+            <div class="itemgaleria">
+                <img class="img-aparicion" src="images/galeria/diseno-grafico-concurso-Mayoral.webp" alt="Concurso Patti y la furia de poseidon para Mayoral">
+                <div class="animacionFade"><p>Concurso Patti y la furia de poseidon para Mayoral</p></div>
+            </div>
+            <div class="itemgaleria">
+                <img class="img-aparicion" src="images/galeria/diseno-varios-concursos-educa-borras.webp" alt="Concursos para Educa Borras">
+                <div class="animacionFade"><p>Concursos para Educa Borras</p></div>
+            </div>
+            <div class="itemgaleria">
+                <img class="img-aparicion" src="images/galeria/diseno-grafico-camisetas-tostadora.webp" alt="Diseños camisetas La Tostadora">
+                <div class="animacionFade"><p>Diseños camisetas</p></div>
+            </div>
+            <div class="itemgaleria">
+                <img class="img-aparicion" src="images/galeria/diseno-grafico-TNT-RRSS.webp" alt="RRSS Canal TNT">
+                <div class="animacionFade"><p>RRSS Canal TNT</p></div>
+            </div>
+            <div class="itemgaleria">
+                <img class="img-aparicion" src="images/galeria/diseno-grafico-TNT-concursos.webp" alt="Concursos para Canal TNT">
+                <div class="animacionFade"><p>Concursos para Canal TNT</p></div>
+            </div>
+            <div class="itemgaleria">
+                <img class="img-aparicion" src="images/galeria/diseno-grafico-gingin.webp" alt="RRSS GinGin (Grupo Believe)">
+                <div class="animacionFade"><p>RRSS GinGin (Grupo Believe)</p></div>
+            </div>
+            <div class="itemgaleria">
+                <img class="img-aparicion" src="images/galeria/diseno-grafico-jovi-concursos.webp" alt="Concursos para Jovi">
+                <div class="animacionFade"><p>Concursos para Jovi</p></div>
+            </div>
+            <div class="itemgaleria">
+                <img class="img-aparicion" src="images/galeria/diseno-grafico-jovi-rrss.webp" alt="RRSS Jovi">
+                <div class="animacionFade"><p>RRSS Jovi</p></div>
+            </div>
+            <div class="itemgaleria">
+                <img class="img-aparicion" src="images/galeria/diseno-grafico-redesign-Pax.webp" alt="Rediseño personal del juego de mesa Pax Porfiriana">
+                <div class="animacionFade"><p>Rediseño personal del juego de mesa Pax Porfiriana</p></div>
+            </div>
+            <div class="itemgaleria">
+                <img class="img-aparicion" src="images/galeria/diseno-grafico-redesign-troglodita.webp" alt="Rediseño personal del juego de mesa Troglodita">
+                <div class="animacionFade"><p>Rediseño personal del juego de mesa Troglodita</p></div>
+            </div>
+            <div class="itemgaleria">
+                <img class="img-aparicion" src="images/galeria/diseno-grafico-fondos-pantalla.webp" alt="Fondos de pantalla para móvil">
+                <div class="animacionFade"><p>Fondos de pantalla para móvil</p></div>
+            </div>
+        </article>
+    </section>
     <section id="sobremi">
         <div class="titular animacionFade"><h2>Sobre mi</h2></div>
         <div class="filete aparicionfilete"></div>
@@ -221,7 +309,7 @@
                 <h5 class="destacado">Desarrollo web | CSS | HTML | JavaScript | WordPress | UI/UX | Diseño gráfico</h5>
                 <p>Profesional del <strong>diseño gráfico</strong>, iniciado en trabajos de impresión y editorial y evolucionado a <strong>diseño online y web</strong>. Acostumbrado al trabajo en equipo, me considero resolutivo, con una amplia experiencia en proyectos muy variados tras más de 16 años trabajando en agencia para clientes como Mayoral, Círculo de Lectores, Educa Borras, Jovi...</p>
                 <p>Después de crear bastantes webs en <strong>WordPress</strong> me estoy centrando más en el <strong>desarrollo web</strong> y ampliando más mis conocimientos en <strong>HTML, CSS, UI/UX, JavaScript y PHP</strong>.</p>
-                <p>Un ejemplo es esta web, la cual he desarrollado utilizando <strong>CSS</strong>  y <strong> JavaScript puro</strong>. Puedes ver la presentación de proyecto en <a href="https://drive.google.com/file/d/1F20Uk5kR9rLVoVZmWwduj-jaT1XOhEfh/view?usp=sharing" target="_blank"><strong>este link</strong></a></p>
+                <p>Un ejemplo es esta web, la cual he desarrollado utilizando <strong>CSS</strong>  y <strong> JavaScript puro</strong>. Puedes ver la presentación de proyecto en <a href="https://drive.google.com/file/d/1F20Uk5kR9rLVoVZmWwduj-jaT1XOhEfh/view?usp=sharing" target="_blank"><span class="colorlink"><strong>este link</strong></span></a></p>
                 <div class="botones">
                     <a target="_blank" href="https://drive.google.com/file/d/19h_76yJXkYsbDNo9laZYt0wX1qgJQ57j/view?usp=sharing" class="boton img-aparicion"><p>CV completo</p><div class="iconoPdf iconosportfolio"></div></a>
                     <a target="_blank" href="https://www.linkedin.com/in/albertobasanta/" class="boton img-aparicion"><p>Linkedin</p><div class="iconoLinkedin iconosportfolio"></div></a>
