--- a/index.html
+++ b/index.html
@@ -72,6 +72,45 @@
         <article>
             <div class="carrusel aparicionFadeUp">
         <div class="interiorCarrusel">
+            <img src="images/ITforEach.webp" alt="web ITforEach en Angular" height="413px" width="3340px">
+        </div>
+    </div>
+        <div class="textoPortfolio aparicionTextoPortfolio">
+        <h4>Web ITforEach</h4>
+        <h5 class="destacado"> Desarrollo web | Angular 19 | Tailwind CSS | Supabase | GitHub API | Cloudinary | Diseño gráfico | SEO </h5>
+        <p>ITforEach es una plataforma creada para desarrolladores, donde pueden compartir sus proyectos, descubrir el trabajo de otros y conectarse con la comunidad. Plataforma desarrollada en Angular 19 con diseño responsive en Tailwind CSS. La autenticación de usuarios se realiza mediante OAuth 2.0 con GitHub, utilizando la API oficial de GitHub para obtener información de los repositorios.
+        La gestión de usuarios y proyectos se conecta en tiempo real a través de Supabase, que actúa como backend y base de datos relacional. Las imágenes de los proyectos se almacenan en Cloudinary para optimizar su carga y entrega.
+        La aplicación está desplegada en Vercel con entorno de producción configurado mediante variables de entorno seguras.</p>
+        <div class="botones">
+            <a target="_blank" href="https://itforeach.vercel.app/" class="boton"><p>Ver sitio</p><div class="iconoLink iconosportfolio"></div></a>
+            <a target="_blank" href="https://github.com/basantades/ITforEach" class="boton"><p>Repositorio GitHub</p><div class="iconoGithub iconosportfolio"></div></a>
+            <a target="_blank" href="https://gamma.app/docs/Descubre-y-comparte-tus-proyectos-7dxf0kf8e2u6lqs?mode=doc" class="boton"><p>Presentación</p><div class="iconoPdf iconosportfolio"></div></a>
+    </div>
+        </div>
+        </article>
+        <article>
+            <div class="carrusel aparicionFadeUp">
+        <div class="interiorCarrusel">
+            <img src="images/RollerBCN.webp" alt="Frontend y backend RollerBCN en Angular" height="413px" width="3090px">
+        </div>
+    </div>
+        <div class="textoPortfolio aparicionTextoPortfolio">
+        <h4>Proyecto RollerBCN</h4>
+        <h5 class="destacado"> Desarrollo web | Angular 19 | Tailwind CSS | Node.js | Express | MongoDB | Leaflet | FullCalendar | Chart.js</h5>
+        <p>Aplicación web desarrollada en Angular 19 con diseño responsive en Tailwind CSS.
+        Integra un mapa interactivo usando Leaflet.js, un calendario de eventos mediante FullCalendar, y gráficos estadísticos generados con Chart.js.
+        El frontend consume una API REST propia desarrollada en Node.js con Express y MongoDB, alojada en Railway.
+        La comunicación entre el cliente y el servidor sigue un modelo basado en peticiones HTTP estándar, utilizando controladores estructurados y un sistema de rutas RESTful para la gestión de eventos y ubicaciones.</p>
+        <div class="botones">
+            <a target="_blank" href="https://rollerbcn.vercel.app/" class="boton"><p>Ver sitio</p><div class="iconoLink iconosportfolio"></div></a>
+            <a target="_blank" href="https://github.com/basantades/RollerBCN" class="boton"><p>Repositorio GitHub</p><div class="iconoGithub iconosportfolio"></div></a>
+            <a target="_blank" href="https://github.com/basantades/Backend-RollerBCN" class="boton"><p>Repositorio GitHub Backend</p><div class="iconoGithub iconosportfolio"></div></a>
+    </div>
+        </div>
+        </article>
+        <article>
+            <div class="carrusel aparicionFadeUp">
+        <div class="interiorCarrusel">
             <img src="images/fabtextil.webp" alt="web Fabtextil en WordPress" height="413px" width="2621px">
         </div>
     </div>
@@ -99,6 +138,26 @@
             <a target="_blank" href="https://github.com/basantades/mini-juego-pokemon" class="boton"><p>Repositorio GitHub</p><div class="iconoGithub iconosportfolio"></div></a>
             <a target="_blank" href="https://drive.google.com/file/d/1IS0r5HMhCB9aUiFxcHzaVnw3pRPC5V4a/view?usp=sharing" class="boton"><p>Presentación</p><div class="iconoPdf iconosportfolio"></div></a>
         </div></div>
+        </article>
+        <article>
+            <div class="carrusel aparicionFadeUp">
+        <div class="interiorCarrusel">
+            <img src="images/Starships-StarWars.webp" alt="Starships of Star Wars en Angular" height="413px" width="2152px">
+        </div>
+    </div>
+        <div class="textoPortfolio aparicionTextoPortfolio">
+        <h4>Starships of Star Wars</h4>
+        <h5 class="destacado"> Desarrollo web | Angular 19 | Tailwind CSS | Firebase Authentication | API Externa | TypeScript | Diseño gráfico </h5>
+        <p>Aplicación web desarrollada en Angular 19 para la exploración de datos de Star Wars.
+        Permite a los usuarios registrarse e iniciar sesión mediante autenticación de Firebase.
+        El sistema consume datos de una API pública externa para mostrar información de naves, pilotos y películas de la saga.
+        El diseño está creado con Tailwind CSS y animaciones personalizadas para una mejor experiencia de usuario.
+        Incluye pruebas unitarias de componentes críticos utilizando las herramientas de testing de Angular.</p>
+        <div class="botones">
+            <a target="_blank" href="https://starships-star-wars.vercel.app/" class="boton"><p>Ver sitio</p><div class="iconoLink iconosportfolio"></div></a>
+            <a target="_blank" href="https://github.com/basantades/S7.-StarWars-Angular" class="boton"><p>Repositorio GitHub</p><div class="iconoGithub iconosportfolio"></div></a>
+    </div>
+        </div>
         </article>
         <article>
             <div class="carrusel aparicionFadeUp">
